--- a/app/views/spree/admin/order_settings/new.html.erb
+++ b/app/views/spree/admin/order_settings/new.html.erb
@@ -20,6 +20,14 @@
     </tr>
    
     <% end %>
+    <tr>
+      <td>
+        <%= f.label :minimum_booking_period %></br>
+      </td>
+      <td>
+        <%= f.input :minimum_booking_period, :label =>false %>      
+      </td>    
+    </tr>
         <%= f.actions do %>
     <tr>
       <td>
