--- a/app/views/spree/admin/order_settings/new.html.erb
+++ b/app/views/spree/admin/order_settings/new.html.erb
@@ -18,7 +18,15 @@
         <%= f.input :default_rate, :label =>false %>      
       </td>    
     </tr>
-   
+    <tr>
+      <td>
+        <%= f.label "Minimum Booking Period(In Days)" %></br>
+      </td>
+      <td>
+        <%= f.input :minimum_booking_period, :label =>false %>      
+      </td>    
+    </tr> 
+
     <% end %>
         <%= f.actions do %>
     <tr>
