--- a/app/views/spree/admin/order_settings/new.html.erb
+++ b/app/views/spree/admin/order_settings/new.html.erb
@@ -27,7 +27,16 @@
         <%= f.input :minimum_booking_period, :label =>false %>      
       </td>    
     </tr>
-       
+    
+    <tr>
+      <td>
+        <%= f.label "maximum amount of spaces"  %></br>
+      </td>
+      <td>
+        <%= f.input :maximum_space, :label =>false %>      
+      </td>    
+    </tr>   
+
     <% end %>
         <%= f.actions do %>
     <tr>
@@ -45,4 +54,6 @@
 </table>
 
 </div>
+
+
 
