add parking_permit attribute @sivan

--- a/app/views/spree/admin/order_settings/new.html.erb
+++ b/app/views/spree/admin/order_settings/new.html.erb
@@ -36,6 +36,15 @@
         <%= f.input :maximum_space, :label =>false %>      
       </td>    
     </tr>   
+    
+    <tr>
+      <td>
+        <%= f.label "parking permit"  %></br>
+      </td>
+      <td>
+        <%= f.input :parking_permit, :label =>false %>      
+      </td>    
+    </tr>
 
     <% end %>
         <%= f.actions do %>
